# airflow-pyspark-docker

./: .env.example  .gitignore  Dockerfile-airflow  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.py  etl_config.yaml
dags/: contract_dag.py  currency_dag.py  hello_world_dag.py  pb_analytics_dag.py  powerbi_export_pipeline_dag.py  pricebook_analytics_dag.py  pyspark_world_dag.py  shared_default_args.py  test_dag.py  test_pyspark_dag.py  user_info_dag.py
dags/benchmarking/: benchmark_report_historical_data.py  benchmark_report_material_benchmark_history_dag.py
dags/bid_evaluation/: bid_evaluation_file_upload_dag.py
dags/contract/: contract_dashboard_contract_info_dag.py  contract_dashboard_negotiation_history_combined_dag.py  contract_dashboard_pricebook_and_pricebook_product_info_dag.py  contract_dashboard_request_info_dag.py  contract_service_request_products_dag.py  pricebook_analytics_dag.py
dags/contract-user/: user_info_dag.py
dags/contract_user/: user_info_dag.py
dags/generic/: currency_dag.py  currency_new_dag.py
dags/sql/: contract_dashboard_contract_info.sql  contract_user_info.sql  create_staging_table.sql  pricebook_analytics.sql
data/: currencies_data.json  currency_rates.csv
plugins/: bid_evaluation_etl.py
scripts/: contract_etl_job.py  currency_rate_etl_job.py  logger_utils.py  pg_db_utils.py  pyspark_etl_job.py  pyspark_powerbi_etl_job.py  pyspark_pricebook_analytics_job.py  pyspark_user_info_job.py  requests_etl_job.py  spark_utils.py
(+25 files in other folders)
